Change google analytic code

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-SHT09G84HT"
+      src="https://www.googletagmanager.com/gtag/js?id=G-YZHEGQ310C"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
-        window.dataLayer.push(arguments);
+        dataLayer.push(arguments);
       }
       gtag("js", new Date());
 
-      gtag("config", "G-SHT09G84HT");
+      gtag("config", "G-YZHEGQ310C");
     </script>
   </head>
   <body>
