--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section class="header">
         <section class="top-section">
           <nav class="nav-bar">
-            <p class="logo-box"><a href="#">My Logo</a></p>
+            <h1 class="logo-box"><a href="#">My Logo</a></h1>
             <span class="menu-icon"><i class="fas fa-bars"></i></span>
             <ul class="menu">
               <li class="menu-item"><a href="#projects">Portfolio</a></li>
@@ -56,8 +56,8 @@
 
         <section class="second-section-container">
           <section class="second-section">
-            <p>I'm Henry</p>
-            <p>Glad to see you!</p>
+            <h1>I'm Henry</h1>
+            <h1>Glad to see you!</h1>
             <p>
               I’m a software developer! I can help you build a product , feature
               or website Look through some of my work and experience! If you
@@ -219,7 +219,7 @@
       <section class="about-container">
         <section id="about" class="about">
           <section class="about-intro-section">
-            <p>About Myself</p>
+            <h1>About Myself</h1>
             <p>
               Hello I’m a software developer! I can help you build a product ,
               feature or website Look through some of my work and experience! If
