Accessibility improvements: headings and img alt

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <img
               class="image"
               src="./assets/images/project2.png"
-              alt="My first project snapshot"
+              alt="My second project snapshot"
             />
           </section>
           <section>
@@ -156,7 +156,7 @@
             <img
               class="image"
               src="./assets/images/project3.png"
-              alt="My first project snapshot"
+              alt="My third project snapshot"
             />
           </section>
           <section>
@@ -188,7 +188,7 @@
             <img
               class="image"
               src="./assets/images/project4.png"
-              alt="My first project snapshot"
+              alt="My fourth project snapshot"
             />
           </section>
           <section>
@@ -289,7 +289,7 @@
 
       <section class="contact-wrapper">
         <section id="contact" class="contact">
-          <p>Contact me</p>
+          <h1>Contact me</h1>
           <p>
             If you have an application you are interested in developing, a
             feature that you need built or a project that needs coding. I’d love
