Adjust contact section margin bottom

--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
               hestiate to contact me.
             </p>
             <p class="connect-about">LET’S CONNECT</p>
-            <ul class="social-container-about">
-              <li><i class="fab fa-github"></i></li>
-              <li><i class="fab fa-linkedin-in"></i></li>
-              <li><i class="fab fa-angellist"></i></li>
-              <li><i class="fab fa-twitter"></i></li>
-              <li><i class="fab fa-medium-m"></i></li>
+            <ul class="social-container-about social-container">
+              <li><a href="#"><i class="fab fa-github"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+              <li><a href="#"><i class="fab fa-angellist"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
             </ul>
             <button class="project-button" type="button">Get my resume</button>
           </section>
