--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
       gtag("config", "G-YZHEGQ310C");
     </script>
+    <script defer src="./index.js"></script>
   </head>
   <body>
     <main class="wrapper">
