finish scaffolding for html

--- a/index.html
+++ b/index.html
@@ -368,6 +368,20 @@
           <li class="role year"></li>
         </ul>
         <img src="" alt="" class="modal-image" />
+        <section class="modal-project-details">
+          <p class="modal-project-description"></p>
+          <section class="modals-tech-and-buttons">
+            <ul class="modal-techs"></ul>
+            <div class="modal-buttons">
+              <button class="live-link">
+                <a href="">See Live <i class="fas fa-external-link-alt"></i></a>
+              </button>
+              <button class="github-link">
+                <a href="">See Source <i class="fab fa-github"></i></a>
+              </button>
+            </div>
+          </section>
+        </section>
       </section>
     </section>
     <!-- Project Modal Ends -->
