--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <body>
     <main class="wrapper">
       <nav class="nav-bar">
-        <h1 class="logo-box"><a href="#">My Logo</a></h1>
+        <h1 class="logo-box"><a href="#">Welcome!</a></h1>
         <span class="menu-icon"><i class="fas fa-bars"></i></span>
         <ul class="menu">
           <li class="menu-item"><a href="#projects">Portfolio</a></li>
@@ -58,10 +58,10 @@
 
         <section class="second-section-container">
           <section class="second-section">
-            <h1>I'm Henry</h1>
+            <h1>I'm Henry Kc</h1>
             <h1>Glad to see you!</h1>
             <p>
-              I’m a software developer! I can help you build a product , feature
+              I’m a software engineer! I can help you build a product , feature
               or website Look through some of my work and experience! If you
               like what you see and have a project you need coded, don’t
               hestiate to contact me.
@@ -231,7 +231,7 @@
           <section class="about-intro-section">
             <h1>About Myself</h1>
             <p>
-              Hello I’m a software developer! I can help you build a product ,
+              Hello I’m a software engineer! I can help you build a product ,
               feature or website Look through some of my work and experience! If
               you like what you see and have a project you need coded, don’t
               hestiate to contact me.
@@ -331,7 +331,7 @@
               name="email"
               placeholder="Email"
               required
-              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+              pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
             />
             <textarea
               maxlength="500"
