--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </script>
     <script defer src="./js/index.js"></script>
     <script defer src="./js/modal.js"></script>
+    <script defer src="./js/validation.js"></script>
   </head>
   <body>
     <main class="wrapper">
@@ -265,7 +266,6 @@
               </section>
 
               <section class="lang-list">
-                html
                 <section class="lang">
                   <img
                     src="./assets/images/js.png"
@@ -343,6 +343,7 @@
               required
               placeholder="Enter your message here"
             ></textarea>
+            <p class="error fade"></p>
             <button type="submit" class="project-button send">
               Get in Touch
             </button>
