--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
             feature that you need built or a project that needs coding. I’d love
             to help with it
           </p>
-          <form action="https://formspree.io/f/xyyldewl" method="POST">
+          <form class="contact-me" action="https://formspree.io/f/xyyldewl" method="POST">
             <input
               type="text"
               maxlength="30"
