--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <input
               type="text"
               maxlength="30"
-              class="name"
+              class="name store"
               name="name"
               placeholder="Name"
               required
@@ -328,7 +328,7 @@
             <input
               type="email"
               class="email"
-              name="email"
+              name="email store"
               placeholder="Email"
               required
               pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$"
@@ -339,7 +339,7 @@
               id="msg"
               cols="30"
               rows="7"
-              class="msg"
+              class="msg store"
               required
               placeholder="Enter your message here"
             ></textarea>
