source local storage script in html file

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script defer src="./js/index.js"></script>
     <script defer src="./js/modal.js"></script>
     <script defer src="./js/validation.js"></script>
+    <script defer src="./js/localStorage.js"></script>
   </head>
   <body>
     <main class="wrapper">
