Add links to social media icons

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
         </ul>
       </nav>
       <section class="header">
-        <section class="top-section">
-        </section>
+        <section class="top-section"></section>
 
         <section class="second-section-container">
           <section class="second-section">
@@ -71,19 +70,29 @@
             <p class="connect">LET’S CONNECT</p>
             <ul class="social-container">
               <li>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com/henrykc24"
+                  ><i class="fab fa-twitter"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/henry-kc/"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-medium-m"></i></a>
+                <a href="https://medium.com/@henry_kc"
+                  ><i class="fab fa-medium-m"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/HENRYKC24"
+                  ><i class="fab fa-github"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-angellist"></i></a>
+                <a href="https://web.facebook.com/ezehenryk/"
+                  ><i class="fab fa-facebook"></i
+                ></a>
               </li>
             </ul>
           </section>
@@ -241,22 +250,38 @@
             <p class="connect-about">LET’S CONNECT</p>
             <ul class="social-container-about social-container">
               <li>
-                <a href="#"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/HENRYKC24"
+                  ><i class="fab fa-github"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/henry-kc/"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-angellist"></i></a>
+                <a href="https://web.facebook.com/ezehenryk/"
+                  ><i class="fab fa-facebook"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com/henrykc24"
+                  ><i class="fab fa-twitter"></i
+                ></a>
               </li>
               <li>
-                <a href="#"><i class="fab fa-medium-m"></i></a>
+                <a href="https://medium.com/@henry_kc"
+                  ><i class="fab fa-medium-m"></i
+                ></a>
               </li>
             </ul>
-            <button class="project-button" type="button">Get my resume</button>
+            <button class="project-button" type="button">
+              <a
+                href="https://drive.google.com/file/d/1PkNibcXMULxC93bTyOR95LAXxbqFQQe9/view?usp=sharing"
+                download=""
+                >Get my resume</a
+              >
+            </button>
           </section>
 
           <ul class="tech-stacks">
@@ -317,7 +342,11 @@
             feature that you need built or a project that needs coding. I’d love
             to help with it
           </p>
-          <form class="contact-me" action="https://formspree.io/f/xyyldewl" method="POST">
+          <form
+            class="contact-me"
+            action="https://formspree.io/f/xyyldewl"
+            method="POST"
+          >
             <input
               type="text"
               maxlength="30"
@@ -376,7 +405,9 @@
             <ul class="modal-techs"></ul>
             <div class="modal-buttons">
               <div class="live-link">
-                <a href="#">See Live <i class="fas fa-external-link-alt"></i></a>
+                <a href="#"
+                  >See Live <i class="fas fa-external-link-alt"></i
+                ></a>
               </div>
               <div class="github-link">
                 <a href="#">See Source <i class="fab fa-github"></i></a>
