Add resume download

--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
                 ></a>
               </li>
             </ul>
-            <button class="project-button" type="button">
+            <button class="project-button get-resume" type="button">
               <a
                 href="https://drive.google.com/file/d/1PkNibcXMULxC93bTyOR95LAXxbqFQQe9/view?usp=sharing"
-                download=""
+                download
                 >Get my resume</a
               >
             </button>
