Corrent linter error

--- a/index.html
+++ b/index.html
@@ -275,12 +275,13 @@
                 ></a>
               </li>
             </ul>
-            <button class="project-button get-resume" type="button">
-              <a
-                href="https://drive.google.com/file/d/1PkNibcXMULxC93bTyOR95LAXxbqFQQe9/view?usp=sharing"
-                download
-                >Get my resume</a
-              >
+
+            <button
+              onclick="location.href='https://drive.google.com/file/d/1PkNibcXMULxC93bTyOR95LAXxbqFQQe9/view?usp=sharing'"
+              class="project-button get-resume"
+              type="button"
+            >
+              Get my resume
             </button>
           </section>
 
