Remove type attribute from index.html script tag

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
       gtag("config", "G-YZHEGQ310C");
     </script>
-    <script defer type="module" src="./js/index.js"></script>
+    <script defer src="./js/index.js"></script>
     <script defer src="./js/validation.js"></script>
     <script defer src="./js/localStorage.js"></script>
     <link rel="stylesheet" href="./css/styles.css" />
