Add img tag for avatar placement

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
               </li>
             </ul>
           </section>
+          <img class="avatar" src="./assets/images/profile.jpg" alt="Avatar">
         </section>
       </section>
 
