Implement animation for moblile language section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               </li>
             </ul>
           </section>
-          <img class="avatar" src="./assets/images/profile.jpg" alt="Avatar">
+          <img class="avatar" src="./assets/images/profile.jpg" alt="Avatar" />
         </section>
       </section>
 
@@ -155,7 +155,7 @@
                 <span><i class="far fa-chevron-down"></i></span>
               </section>
 
-              <section class="lang-list">
+              <section class="lang-list lang-height">
                 <section class="lang">
                   <img
                     src="./assets/images/js.png"
@@ -171,7 +171,7 @@
                     alt="HTLM Logo"
                     class="lang-logo"
                   />
-                  <span class="html">HTML</span>
+                  <span class="html">HTML5</span>
                 </section>
 
                 <section class="lang">
@@ -180,19 +180,155 @@
                     alt="CSS Logo"
                     class="lang-logo css-logo"
                   />
-                  <span class="css">CSS</span>
+                  <span class="css">CSS3</span>
+                </section>
+
+                <section class="lang">
+                  <img
+                    src="./assets/images/php.png"
+                    alt="CSS Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">PHP</span>
+                </section>
+
+                <section class="lang">
+                  <img
+                    src="./assets/images/node.svg"
+                    alt="CSS Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">Node</span>
+                </section>
+                <section class="lang">
+                  <img
+                    src="./assets/images/mysql.png"
+                    alt="CSS Logo"
+                    class="lang-logo mysql-logo"
+                  />
+                  <span class="css">MySQL</span>
+                </section>
+                <section class="lang">
+                  <img
+                    src="./assets/images/mongodb.jpg"
+                    alt="CSS Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">MongoDB</span>
+                </section>
+                <section class="lang">
+                  <img
+                    src="./assets/images/java.png"
+                    alt="CSS Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">Java</span>
                 </section>
               </section>
             </li>
 
-            <li class="lang-and-icon frames-and-icon">
-              <span class="frame">Frameworks</span>
-              <span><i class="far fa-chevron-right"></i></span>
+            <li class="langs-frames-skills">
+              <section class="lang-and-icon">
+                <span>Frameworks</span>
+                <span><i class="far fa-chevron-down"></i></span>
+              </section>
+
+              <section class="lang-list frame-height">
+                <section class="lang">
+                  <img
+                    src="./assets/images/express.png"
+                    alt="CSS Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">Express.js</span>
+                </section>
+
+                <section class="lang">
+                  <img
+                    src="./assets/images/bootstrap.png"
+                    alt="CSS Logo"
+                    class="lang-logo mysql-logo"
+                  />
+                  <span class="css">Bootstrap</span>
+                </section>
+
+                <section class="lang">
+                  <img
+                    src="./assets/images/react.svg"
+                    alt="CSS Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">React.js</span>
+                </section>
+
+                <section class="lang">
+                  <img
+                    src="./assets/images/angular.svg"
+                    alt="CSS Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">Angular.js</span>
+                </section>
+
+                <section class="lang">
+                  <img
+                    src="./assets/images/react_native.png"
+                    alt="CSS Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">React Native</span>
+                </section>
+              </section>
             </li>
 
-            <li class="lang-and-icon skills-and-icon">
-              <span class="skill">Skills</span>
-              <span><i class="far fa-chevron-right"></i></span>
+            <li class="langs-frames-skills">
+              <section class="lang-and-icon">
+                <span>Soft Skills</span>
+                <span><i class="far fa-chevron-down"></i></span>
+              </section>
+
+              <section class="lang-list skill-height">
+                <section class="lang">
+                  <span class="css">integrity</span>
+                </section>
+
+                <section class="lang">
+                  <span class="css">Effective Communication</span>
+                </section>
+
+                <section class="lang">
+                  <span class="css">Dependability</span>
+                </section>
+
+                <section class="lang">
+                  <span class="css">Openmindedness</span>
+                </section>
+
+                <section class="lang">
+                  <span class="css">Teamwork</span>
+                </section>
+                <section class="lang">
+                  <span class="css">Problem Solving</span>
+                </section>
+                <section class="lang">
+                  <span class="css">Critical Thinking</span>
+                </section>
+                <section class="lang">
+                  <span class="css">Organisation</span>
+                </section>
+                <section class="lang">
+                  <span class="css">Empathy</span>
+                </section>
+                <section class="lang">
+                  <span class="css">Giving/Receiving Feedback</span>
+                </section>
+                <section class="lang">
+                  <span class="css">Adaptability</span>
+                </section>
+                <section class="lang">
+                  <span class="css">Willingnes to Learn</span>
+                </section>
+              </section>
             </li>
           </ul>
         </section>
