Correct linter error

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
     <section class="project-modal-background">
       <section class="project-modal-main">
         <section class="modal-top-section">
-          <h1 class="modal-project-name"></h1>
+          <h1 class="modal-project-name">Project Name</h1>
           <span class="close">&times;</span>
         </section>
         <ul class="project-year md-pr-yr">
