Add fixed top button

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <main class="wrapper">
+    <main class="wrapper" id="wrapper">
       <nav class="nav-bar">
         <h1 class="logo-box"><a href="#">Welcome!</a></h1>
         <span class="menu-icon"><i class="fas fa-bars"></i></span>
         <ul class="menu">
-          <li class="menu-item"><a href="#projects">Portfolio</a></li>
+          <li class="menu-item"><a href="#projects">Works</a></li>
           <li class="menu-item"><a href="#about">About</a></li>
           <li class="menu-item"><a href="#contact">Contact</a></li>
         </ul>
@@ -60,12 +60,14 @@
         <section class="second-section-container">
           <section class="second-section">
             <h1>I'm Henry Kc</h1>
-            <h1>Glad to see you!</h1>
+            <h1>Glad you visited!</h1>
             <p>
-              I’m a software engineer! I can help you build a product , feature
-              or website Look through some of my work and experience! If you
-              like what you see and have a project you need coded, don’t
-              hestiate to contact me.
+              I’m a passionate software engineer/developer! I build products,
+              features, websites, mobile apps and more. I train aspiring
+              software developers online and in-person. Look through some of my
+              work and experience! If you like what you see and have a project
+              you need coded or someone you need trained, don’t hestiate to
+              contact me <span><a href="#contact">here</a></span>.
             </p>
             <p class="connect">LET’S CONNECT</p>
             <ul class="social-container">
@@ -100,11 +102,11 @@
         </section>
       </section>
 
-      <section class="about-container">
-        <section id="about" class="about">
+      <section id="about" class="about-container">
+        <section class="about">
           <section class="about-intro-section">
             <h1>About Myself</h1>
-            <p>
+            <p class="about-introductory-text">
               Hello I’m a software engineer! I can help you build a product ,
               feature or website Look through some of my work and experience! If
               you like what you see and have a project you need coded, don’t
@@ -334,8 +336,8 @@
         </section>
       </section>
 
-      <section class="contact-wrapper">
-        <section id="contact" class="contact">
+      <section id="contact" class="contact-wrapper">
+        <section class="contact">
           <h1>Contact me</h1>
           <p>
             If you have an application you are interested in developing, a
@@ -417,6 +419,7 @@
         </section>
       </section>
     </section>
+    <div class="go-to-top"><a class="g-t" href="#">TOP</a></div>
     <!-- Project Modal Ends -->
   </body>
 </html>
