--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
               software developers online and in-person. Look through some of my
               work and experience! If you like what you see and have a project
               you need coded or someone you need trained, don’t hestiate to
-              contact me <span><a href="#contact">here</a></span>.
+              contact me <span><a href="#contact">here</a></span
+              >.
             </p>
             <p class="connect">LET’S CONNECT</p>
             <ul class="social-container">
@@ -107,10 +108,17 @@
           <section class="about-intro-section">
             <h1>About Myself</h1>
             <p class="about-introductory-text">
-              Hello I’m a software engineer! I can help you build a product ,
-              feature or website Look through some of my work and experience! If
-              you like what you see and have a project you need coded, don’t
-              hestiate to contact me.
+              I am Henry Kc from Nigeria. I am a
+              zealous and an indefaguable software engineer. I have also
+              received training at Udemy, Coursera, and Pluralsight; all in
+              the United States of America remotely. My passion for computer programming is
+              unequalled. I have been teaching
+              this course for about 2 years. I have
+              received a price and certification from Facebook/Andela for being
+              selected across Africa to participate in the 'Build For SDG 2020'
+              program. I have interned with Seedstages, Carlifornia, United
+              States and I am currently with Microverse Inc. United
+              States remotely.
             </p>
             <p class="connect-about">LET’S CONNECT</p>
             <ul class="social-container-about social-container">
@@ -377,7 +385,7 @@
             ></textarea>
             <p class="error fade"></p>
             <button type="submit" class="project-button send">
-              Get in Touch
+              Send Message
             </button>
           </form>
         </section>
@@ -419,7 +427,7 @@
         </section>
       </section>
     </section>
-    <div class="go-to-top"><a class="g-t" href="#">TOP</a></div>
+    <a class="g-t" href="#"><div class="go-to-top">TOP</div></a>
     <!-- Project Modal Ends -->
   </body>
 </html>
