Edit about me text

--- a/index.html
+++ b/index.html
@@ -108,17 +108,15 @@
           <section class="about-intro-section">
             <h1>About Myself</h1>
             <p class="about-introductory-text">
-              I am Henry Kc from Nigeria. I am a
-              zealous and an indefaguable software engineer. I have also
-              received training at Udemy, Coursera, and Pluralsight; all in
-              the United States of America remotely. My passion for computer programming is
-              unequalled. I have been teaching
-              this course for about 2 years. I have
-              received a price and certification from Facebook/Andela for being
-              selected across Africa to participate in the 'Build For SDG 2020'
-              program. I have interned with Seedstages, Carlifornia, United
-              States and I am currently with Microverse Inc. United
-              States remotely.
+              I am Henry Kc from Nigeria. I am a zealous and an indefaguable
+              software engineer. I have received training at Udemy, Coursera,
+              and Pluralsight; all in the United States of America remotely. My
+              passion for computer programming is unequalled. I have been
+              teaching this course for about 2 years. I have received a price
+              and certification from Facebook/Andela for being selected across
+              Africa to participate in the 'Build For SDG 2020' program. I have
+              interned with Seedstages, Carlifornia, United States and I am
+              currently with Microverse Inc. United States remotely.
             </p>
             <p class="connect-about">LET’S CONNECT</p>
             <ul class="social-container-about social-container">
