--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               features, websites, mobile apps and more. I train aspiring
               software developers online and in-person. Look through some of my
               work and experience! If you like what you see and have a project
-              you need coded or someone you need trained, don’t hestiate to
+              you need coded or someone you need trained, don’t hesitate to
               contact me <span><a href="#contact">here</a></span
               >.
             </p>
