Add more skills to my portfolio

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
             <h1>I'm Henry Kc</h1>
             <h1>Glad you visited!</h1>
             <p>
-              I’m a passionate software engineer/developer! I build products,
+              I'm a passionate software engineer! I build products,
               features, websites, mobile apps and more. I train aspiring
               software developers online and in-person. Look through some of my
-              work and experience! If you like what you see and have a project
-              you need coded or someone you need trained, don’t hesitate to
+              work and experience. If you like what you see and have a project
+              you need coded, someone you need trained, or a job offer, don't hesitate to
               contact me <span><a href="#contact">here</a></span
               >.
             </p>
-            <p class="connect">LET’S CONNECT</p>
+            <p class="connect">LET'S CONNECT</p>
             <ul class="social-container">
               <li>
                 <a href="https://twitter.com/henrykc24"
@@ -108,17 +108,19 @@
           <section class="about-intro-section">
             <h1>About Myself</h1>
             <p class="about-introductory-text">
-              I am Henry Kc from Nigeria. I am a zealous and an indefaguable
+              I am Henry Kc from Nigeria. I am a zealous and an indefatigable
               software engineer. I have received training at Udemy, Coursera,
               and Pluralsight; all in the United States of America remotely. My
               passion for computer programming is unequalled. I have been
               teaching this course for about 2 years. I have received a price
               and certification from Facebook/Andela for being selected across
-              Africa to participate in the 'Build For SDG 2020' program. I have
-              interned with Seedstages, Carlifornia, United States and I am
-              currently with Microverse Inc. United States remotely.
+              Africa to participate in the 'Build For SDG 2020' program. I 
+              interned with Seedstages, California, United States remotely. I
+              studied full-stack software engineering at Microverse Inc., United States,
+               online where I <strong>graduated with 99.6%</strong> score in the final assessment. 
+               I also obtained a <strong>cumulative point of 44.8/45</strong> overall.
             </p>
-            <p class="connect-about">LET’S CONNECT</p>
+            <p class="connect-about">LET'S CONNECT</p>
             <ul class="social-container-about social-container">
               <li>
                 <a href="https://github.com/HENRYKC24"
@@ -175,6 +177,15 @@
 
                 <section class="lang">
                   <img
+                    src="./assets/images/ruby.png"
+                    alt="Ruby Logo"
+                    class="lang-logo"
+                  />
+                  <span class="js">Ruby</span>
+                </section>
+
+                <section class="lang">
+                  <img
                     src="./assets/images/html.png"
                     alt="HTLM Logo"
                     class="lang-logo"
@@ -208,6 +219,15 @@
                   />
                   <span class="css">Node</span>
                 </section>
+
+                <section class="lang">
+                  <img
+                    src="./assets/images/rails.png"
+                    alt="Rails Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">Rails</span>
+                </section>
                 <section class="lang">
                   <img
                     src="./assets/images/mysql.png"
@@ -215,6 +235,14 @@
                     class="lang-logo mysql-logo"
                   />
                   <span class="css">MySQL</span>
+                </section>
+                <section class="lang">
+                  <img
+                    src="./assets/images/postgresql.jpg"
+                    alt="Postgresql Logo"
+                    class="lang-logo mysql-logo"
+                  />
+                  <span class="css">PostgreSQL</span>
                 </section>
                 <section class="lang">
                   <img
@@ -297,7 +325,7 @@
 
               <section class="lang-list skill-height">
                 <section class="lang">
-                  <span class="css">integrity</span>
+                  <span class="css">Integrity</span>
                 </section>
 
                 <section class="lang">
@@ -309,7 +337,7 @@
                 </section>
 
                 <section class="lang">
-                  <span class="css">Openmindedness</span>
+                  <span class="css">Open mindedness</span>
                 </section>
 
                 <section class="lang">
@@ -322,7 +350,7 @@
                   <span class="css">Critical Thinking</span>
                 </section>
                 <section class="lang">
-                  <span class="css">Organisation</span>
+                  <span class="css">Organization</span>
                 </section>
                 <section class="lang">
                   <span class="css">Empathy</span>
@@ -334,7 +362,7 @@
                   <span class="css">Adaptability</span>
                 </section>
                 <section class="lang">
-                  <span class="css">Willingnes to Learn</span>
+                  <span class="css">Willingness to Learn</span>
                 </section>
               </section>
             </li>
@@ -347,7 +375,7 @@
           <h1>Contact me</h1>
           <p>
             If you have an application you are interested in developing, a
-            feature that you need built or a project that needs coding. I’d love
+            feature that you need built or a project that needs coding. I'd love
             to help with it
           </p>
           <form
